# predicting_human_decisions

./: .gitignore  README.md  environment.yml  pyproject.toml
results/: mse_log.csv
src/OSF_beast_gb/CPC18/: CPC18 - all submissions performance and comparison.R  CPC18 R1 BEAST_GB replication and feature analyses.R
src/OSF_beast_gb/Choices13k/: C13k R1 - BEAST_GB performance and SHAP.R
src/analysis/: plan.md
src/annotate/: annotate.py  decision_personalities.csv  organize.py  parse_results.py  prompts.py  test_problems_prob_and_value_for_winning_gemini_results.csv  test_problems_prob_and_value_for_winning_llama_results.csv  test_problems_prob_and_value_for_winning_results.csv  train_problems_prob_and_value_for_winning_gemini_results.csv  train_problems_prob_and_value_for_winning_llama_results.csv  train_problems_prob_and_value_for_winning_results.csv  utils.py
src/annotate/combined/: test_problems_with_annotations.csv  train_problems_with_annotations.csv
src/data/: validate_csv.ipynb
src/data/cpc18/: CPC18_data.csv
src/data/hab22/: convert_to_csv.R
src/data/text_task/: test_problems.csv  train_problems.csv
src/models/: get_model.py
src/results/: mse_log train val test.csv  mse_log.csv
src/results/random_forest_embed_A_minus_B/: random_forest_predictions.csv
src/results/random_forest_embed_A_minus_B | all-mpnet-base-v2/: random_forest_predictions.csv  random_forest_test_results.csv  random_forest_train_results.csv
src/run/: evaluator.py  process_data.py  run_pipeline.py
src/utils/: data_utils.py  mse_logger.py  vectorizer.py
(+401 files in other folders)
